Source codes for the web-service, client. In the solution also included web-service installation (install.zip), client console (client.zip) and installation manual (install_manual.pdf)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@
 ################################################################################
 
 /OASClient/bin/Debug/OASClient.vshost.exe
+/OASClient/bin/Debug
+/OASClient/bin/Release
+/OASClient/obj
+/OASModels/obj
+/OASWebService/obj
+/packages
+/PPTChecker/bin/Debug
+/PPTChecker/bin/Release
+/PPTChecker/obj
